--- a/login.html
+++ b/login.html
@@ -32,11 +32,11 @@
                 <h3 class="text-center">Welcome Back!</h3>
                 <form>
                     <div class="mb-5 email-input input-container">
-                        <input type="email" class="form-control" id="email" placeholder="Email Address" required>
+                        <input type="email" class="form-control" id="email"  required>
                         <label for="email">Email Address</label>
                     </div>
                     <div class="mb-3 password-input input-container">
-                        <input type="password" class="form-control" id="password" placeholder="Password" required>
+                        <input type="password" class="form-control" id="password" required>
                         <label for="password">Password</label>
                         <span class="password-toggle" onclick="togglePassword()">
                             <i id="eye-icon" class="bi bi-eye"></i>
