--- a/register.html
+++ b/register.html
@@ -37,11 +37,15 @@
                     </div>
 
                     <h5 class="center">Contact Information</h5>
-                    <div class="mb-4 email-input input-container">
-                        <input type="email" class="form-control" required>
-                        <label for="email">Email Address</label>
-                        <input type="number" class="form-control" required>
-                        <label for="number">Phone Number</label>
+                    <div class="mb-4 contact-input input-container">
+                        <div class="input-wrapper">
+                            <input type="email" class="form-control" id="email" required>
+                            <label class="mt-1" for="email">Email Address</label>
+                        </div>
+                        <div class="input-wrapper">
+                            <input type="text" class="form-control" id="number" required>
+                            <label class="mt-1" for="number">Phone Number</label>
+                        </div>
                     </div>
 
                     <div class="text-end mb-3">
