--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
                 <!-- BUTTONS -->
                 <div class="d-none d-lg-block">
-                    <a href="#" class="btn sign-in">Sign-In</a>
-                    <a href="#" class="btn btn-get-started">Get Started</a>
+                    <a href="login.html" class="btn sign-in">Sign-In</a>
+                    <a href="register.html" class="btn btn-get-started">Get Started</a>
                 </div>
 
                 <!-- BURGER MENU -->
