--- a/BootDash.html
+++ b/BootDash.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poppins:ital,
           wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./dashStyle.css">
+    <title>Dashboard</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -44,25 +45,25 @@
                       <ul class="nav-btn sub-menu">
                         <li>
                           <a href="#">
-                            <img class="vector" src="/Images/Vector.svg" alt="Vector">
+                            <img class="vector" src="./Images/Vector.svg" alt="Vector">
                             <span>Pending</span>
                           </a>
                         </li>
                         <li>
                           <a href="#">
-                            <img class="vector" src="/Images/Vector.svg" alt="Vector">
+                            <img class="vector" src="./Images/Vector.svg" alt="Vector">
                             <span>Borrowed</span>
                           </a>
                         </li>
                         <li>
                           <a href="#">
-                            <img class="vector" src="/Images/Vector.svg" alt="Vector">
+                            <img class="vector" src="./Images/Vector.svg" alt="Vector">
                             <span>Returned</span>
                           </a>
                         </li>
                         <li>
                           <a href="#">
-                            <img class="vector" src="/Images/Vector.svg" alt="Vector">
+                            <img class="vector" src="./Images/Vector.svg" alt="Vector">
                             <span>Overdue</span>
                           </a>
                         </li>
@@ -78,7 +79,26 @@
             </div>
             <div class="col-10 g-0">
                 <div class="topbar">
-                  <h3 class="dash">Readers List</h3>
+                  <div class="profile"> 
+                    <h3 class="dash">Readers List</h3>
+                    <ul class="proflist xxl-col-9">
+                      <div class="notif">
+                        <a href="#">
+                          <img class="vector" src="./Images/Bell_pin.svg" alt="Vector" height="30px" width="30px">
+                        </a>
+                        <div class="separator"></div>
+                      </div>
+                      <li>
+                        <a href="#">
+                          <img class="vector" src="./Images/Profile.svg" alt="Vector" height="60px" width="60px">
+                          <div class="prof">
+                            <span>Daisy Lyn Laygan</span><br>
+                            <h5>Librarian</h5>
+                          </div>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
                 <div class="btns">
                   <ul>
@@ -97,20 +117,6 @@
         </div>
     </div>
     <script>
-        // Add event listeners for buttons to manage active state
-        const buttons = document.querySelectorAll('.btn');
-
-        buttons.forEach(button => {
-            button.addEventListener('click', function() {
-                // Remove active class from all buttons
-                buttons.forEach(btn => btn.classList.remove('active'));
-                
-                // Add active class to the clicked button
-                this.classList.add('active');
-            });
-        });
-
-        // Existing code for submenu toggle
         document.querySelector('.nav-btn > li:nth-child(4) > a').addEventListener('click', function() {
             const submenu = document.querySelector('.sub-menu');
             const vecIcon = document.querySelector('.vec');
