--- a/BootDash.html
+++ b/BootDash.html
@@ -5,135 +5,129 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poppins:ital,
-          wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./dashStyle.css">
-    <title>Dashboard</title>
+    <link rel="stylesheet" type="text/css" href="./styles.css"> 
+    <title>LiBorrow Dashboard</title>
 </head>
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-2">
-                <div class="sidebar">
-                  <h3 class="side">LiBorrow.</h3>
-                </div>
-                <ul class="nav-btn">
-                  <li class="side-list">
-                      <a href="#">
-                          <img class="Icon" src="./Images/DashIcon.svg" alt="Icon" width="24" height="24">
-                          <span class="nav-item">Dashboard</span>
-                      </a>
-                  </li>
-                  <li class="side-list">
-                      <a href="#">
-                          <img class="Icon" src="./Images/ReaderIcon.svg" alt="Icon" width="24" height="24">
-                          <span class="nav-item">Readers List</span>
-                      </a>
-                  </li>
-                  <li class="side-list">
-                      <a href="#">
-                          <img class="Icon" src="./Images/InventoryIcon.svg" alt="Icon" width="24" height="24">
-                          <span class="nav-item">Inventory</span>
-                      </a>
-                  </li>
-                  <li class="side-list">
-                      <a href="#">
-                          <img class="Icon" src="./Images/TransacIcon.svg" alt="Icon" width="24" height="24">
-                          <span class="nav-item">Transactions</span>
-                          <img class="vec" src="./Images/Vec.svg" alt="Vector">
-                      </a>
-                      <ul class="nav-btn sub-menu">
-                        <li>
-                          <a href="#">
-                            <img class="vector" src="./Images/Vector.svg" alt="Vector">
-                            <span>Pending</span>
-                          </a>
-                        </li>
-                        <li>
-                          <a href="#">
-                            <img class="vector" src="./Images/Vector.svg" alt="Vector">
-                            <span>Borrowed</span>
-                          </a>
-                        </li>
-                        <li>
-                          <a href="#">
-                            <img class="vector" src="./Images/Vector.svg" alt="Vector">
-                            <span>Returned</span>
-                          </a>
-                        </li>
-                        <li>
-                          <a href="#">
-                            <img class="vector" src="./Images/Vector.svg" alt="Vector">
-                            <span>Overdue</span>
-                          </a>
-                        </li>
-                      </ul>
-                  </li>
-                  <li class="side-list">
-                      <a href="#">
-                          <img class="Icon" src="./Images/HistoryIcon.svg" alt="Icon" width="25" height="25">
-                          <span class="nav-item">History</span>
-                      </a>
-                  </li>
-              </ul>
-            </div>
-            <div class="col-10 g-0">
-                <div class="topbar">
-                  <div class="profile"> 
-                    <h3 class="dash">Readers List</h3>
-                    <ul class="proflist xxl-col-9">
-                      <div class="notif">
+            <div id="sidebar" class="col-2">
+                <h3 id="brand-name">LiBorrow.</h3>
+                <ul id="nav-list">
+                    <li>
                         <a href="#">
-                          <img class="vector" src="./Images/Bell_pin.svg" alt="Vector" height="30px" width="30px">
+                            <img src="./Images/DashIcon.svg" alt="Dashboard Icon" width="24" height="24">
+                            Dashboard
                         </a>
-                        <div class="separator"></div>
-                      </div>
-                      <li>
-                        <a href="#">
-                          <img class="vector" src="./Images/Profile.svg" alt="Vector" height="60px" width="60px">
-                          <div class="prof">
-                            <span>Daisy Lyn Laygan</span><br>
-                            <h5>Librarian</h5>
-                          </div>
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="btns">
-                  <ul>
-                    <li class="item">
-                      <a href="#" class="btn one">All</a>
-                      <a href="#" class="btn two">Suspended</a>
-                      <a href="#" class="btn three">Banned</a>
-                      <a href="#" class="btn four">History</a>
                     </li>
-                  </ul>
-                </div>
-                <div class="content">
-                  <h1>THIS IS CONTENT MODAFOKA</h1>
+                    <li>
+                        <a href="#" id="button1">
+                            <img src="./Images/ReaderIcon.svg" alt="Readers Icon" width="24" height="24">
+                            Readers List
+                        </a>  
+                    </li>                    
+                    <li>
+                        <a href="#">
+                            <img src="./Images/InventoryIcon.svg" alt="Inventory Icon" width="24" height="24">
+                            Inventory
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" onclick="toggleSubmenu()">
+                            <img src="./Images/TransacIcon.svg" alt="Transactions Icon" width="24" height="24">
+                            Transactions
+                            <img id="submenu-toggle-icon" src="./Images/Vec.svg" alt="Toggle">
+                        </a>
+                        <ul id="submenu">
+                          <li>
+                              <a href="#">
+                                  <img src="./Images/Vector.svg" alt="Pending Icon" width="18" height="18">
+                                  Pending
+                              </a>
+                          </li>
+                          <li>
+                              <a href="#">
+                                  <img src="./Images/Vector.svg" alt="Borrowed Icon" width="18" height="18">
+                                  Borrowed
+                              </a>
+                          </li>
+                          <li>
+                              <a href="#">
+                                  <img src="./Images/Vector.svg" alt="Returned Icon" width="18" height="18">
+                                  Returned
+                              </a>
+                          </li>
+                          <li>
+                              <a href="#">
+                                  <img src="./Images/Vector.svg" alt="Overdue Icon" width="18" height="18">
+                                  Overdue
+                              </a>
+                          </li>
+                      </ul>
+                    </li>
+                    <li>
+                        <a href="#" onclick="changeContent('History')">
+                            <img src="./Images/HistoryIcon.svg" alt="History Icon" width="25" height="25">
+                            History
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div id="main-content" class="col-10">
+                <div id="topbar">
+                  <h3 id="page-title">Readers List</h3>
+                  <div id="profile-section" >
+                      <div id="notification">
+                          <a href="#">
+                              <img src="./Images/Bell_pin.svg" alt="Notifications" height="30px" width="30px">
+                          </a>
+                      </div>
+                      <div id="profile">
+                          <a href="#">
+                              <img src="./Images/Profile.svg" alt="Profile" height="60px" width="60px">
+                              <div id="profile-info">
+                                  <span>Daisy Lyn Laygan</span><br>
+                                  <h5>Librarian</h5>
+                              </div>
+                          </a>
+                      </div>
+                  </div>
+                </div>            
+                <div id="body-content" class="col-10">
+                    CONTENT
                 </div>
             </div>
         </div>
     </div>
+
     <script>
-        document.querySelector('.nav-btn > li:nth-child(4) > a').addEventListener('click', function() {
-            const submenu = document.querySelector('.sub-menu');
-            const vecIcon = document.querySelector('.vec');
-            
-            // Toggle submenu expansion
+        function toggleSubmenu() {
+            const submenu = document.getElementById('submenu');
+            const icon = document.getElementById('submenu-toggle-icon');
+
             if (submenu.style.maxHeight === "0px" || submenu.style.maxHeight === "") {
-                submenu.style.maxHeight = submenu.scrollHeight + "px"; // Expand the submenu
-                vecIcon.classList.add('rotate'); // Add rotation class
+                submenu.style.maxHeight = submenu.scrollHeight + "px";
+                icon.classList.add('rotate');
             } else {
-                submenu.style.maxHeight = "0px"; // Collapse the submenu
-                vecIcon.classList.remove('rotate'); // Remove rotation class
+                submenu.style.maxHeight = "0px";
+                icon.classList.remove('rotate');
             }
+        }
+
+        document.getElementById("button1").addEventListener("click", function(event) {
+            event.preventDefault(); 
+            fetch('./ReadersList.html') 
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById("body-content").innerHTML = data; // Update the content div
+                })
+                .catch(error => {
+                    console.error('Error fetching content:', error);
+                });
         });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
+</html> 
