--- a/ReaderDash.html
+++ b/ReaderDash.html
@@ -73,6 +73,18 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="pagination">
+                <span><img src="./Images/Expand_left.svg" alt="Previous Icon" width="18" height="18"></span>
+                <a href="#" class="prev">Previous</a>
+                <a href="#" class="page-number active " id="one">1</a>
+                <a href="#" class="page-number " id="num">2</a>
+                <a href="#" class="page-number " id="num">3</a>
+                <a href="#" class="page-number " id="num" >4</a>
+                <a href="#" class="page-number  " id="num">...</a>
+                <a href="#" class="page-number " id="num">50</a>
+                <a href="#" class="next">Next</a>
+                <span><img src="./Images/Expand_right.svg" alt="Next Icon" width="18" height="18"></span>
+            </div>            
         </div>
     </div>
 </div>
