--- a/BootDash.html
+++ b/BootDash.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./dashStyle.css">
-    <link rel="stylesheet" type="text/css" href="./styles.css"> 
+    <link rel="stylesheet" type="text/css" href="./ReaderStyle.css"> 
     <title>LiBorrow Dashboard</title>
 </head>
 <body>
@@ -118,7 +118,7 @@
 
         document.getElementById("button1").addEventListener("click", function(event) {
             event.preventDefault(); 
-            fetch('./ReadersList.html') 
+            fetch('./ReaderDash.html') 
                 .then(response => response.text())
                 .then(data => {
                     document.getElementById("body-content").innerHTML = data; // Update the content div
