--- a/BootDash.html
+++ b/BootDash.html
@@ -78,17 +78,18 @@
             <div id="main-content" class="col-10">
                 <div id="topbar">
                   <h3 id="page-title">Readers List</h3>
-                  <div id="profile-section" >
+                  <div id="profile-section" class="col-3" >
                       <div id="notification">
                           <a href="#">
                               <img src="./Images/Bell_pin.svg" alt="Notifications" height="30px" width="30px">
                           </a>
                       </div>
-                      <div id="profile">
-                          <a href="#">
-                              <img src="./Images/Profile.svg" alt="Profile" height="60px" width="60px">
+                      <div class="separator"></div>
+                      <div id="profile" class="col-4">
+                          <a href="#" class="info-column">
+                              <img src="./Images/Profile.svg" id="profile-image" alt="Profile" height="60px" width="60px">
                               <div id="profile-info">
-                                  <span>Daisy Lyn Laygan</span><br>
+                                  <span>Daisy Lyn Laygan</span>
                                   <h5>Librarian</h5>
                               </div>
                           </a>
