--- a/BootDash.html
+++ b/BootDash.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./dashStyle.css">
     <link rel="stylesheet" type="text/css" href="./ReaderStyle.css"> 
+    <link rel="stylesheet" type="text/css" href="./InventoryStyle.css"> 
     <title>LiBorrow Dashboard</title>
 </head>
 <body>
@@ -29,7 +30,7 @@
                         </a>  
                     </li>                    
                     <li>
-                        <a href="#">
+                        <a href="#" id="button2">
                             <img src="./Images/InventoryIcon.svg" alt="Inventory Icon" width="24" height="24">
                             Inventory
                         </a>
@@ -120,6 +121,17 @@
         document.getElementById("button1").addEventListener("click", function(event) {
             event.preventDefault(); 
             fetch('./ReaderDash.html') 
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById("body-content").innerHTML = data; // Update the content div
+                })
+                .catch(error => {
+                    console.error('Error fetching content:', error);
+                });
+        });
+        document.getElementById("button2").addEventListener("click", function(event) {
+            event.preventDefault(); 
+            fetch('./InventoryDash.html') 
                 .then(response => response.text())
                 .then(data => {
                     document.getElementById("body-content").innerHTML = data; // Update the content div
