--- a/HistoryDash.html
+++ b/HistoryDash.html
@@ -1,7 +1,7 @@
 <div class="content-box" id="content2">
     <div class="container">
 
-        <div id="d1" class="Inventory-box">
+        <div id="d1" class="History-box">
             <div class="input" >
                 <div class="search-bar">
                     <input type="text" placeholder=" Search...">
@@ -27,56 +27,61 @@
                 </div>
             </div>
             <!-- Table Section -->
-            <table class="Inventory-table">
+            <table class="History-table">
                 <thead>
                     <tr>
-                        <th>Book Id</th>
-                        <th>Title</th>
-                        <th>Author</th>
-                        <th>Genre</th>
-                        <th>Details</th>
+                        <th>Book ID</th>
+                        <th>Tile</th>
+                        <th>User Name</th>
+                        <th>Due Date</th>
+                        <th>Days Overdue</th>
+                        <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>0001</td>
-                        <td>Alice in Wonderland</td>
-                        <td>Lewis Carroll</td>
-                        <td>Fantasy/Adventure</td> 
-                        <td class="act"><a>View More</a></td>
+                        <td>Treasure Island</td>
+                        <td>Nicholai</td>
+                        <td>09/03/2024</td>
+                        <td>4 Days</td>
+                        <td class="act"><a>Send Reminder</a></td>
                     </tr>
                     <tr>
                         <td>0002</td>
-                        <td>Treasure Land</td>
-                        <td>Lewis Carroll</td>
-                        <td>Fantasy/Adventure</td> 
-                        <td class="act"><a>View More</a></td>
+                        <td>Bridgerton</td>
+                        <td>Jane Smith</td>
+                        <td>10/07/2024</td>
+                        <td>5 Days</td>
+                        <td class="act"><a>Send Reminder</a></td>
                     </tr>
                     <tr>
                         <td>0003</td>
-                        <td>Treasure Land</td>
-                        <td>Lewis Carroll</td>
-                        <td>Fantasy/Adventure</td> 
-                        <td class="act"><a>View More</a></td>
+                        <td>Treasure Island</td>
+                        <td>Kobe</td>
+                        <td>09/03/2024</td>
+                        <td>4 Days</td>
+                        <td class="act"><a>Send Reminder</a></td>
                     </tr>
                     <tr>
                         <td>0004</td>
-                        <td>Treasure Land</td>
-                        <td>Lewis Carroll</td>
-                        <td>Fantasy/Adventure</td> 
-                        <td class="act"><a>View More</a></td>
+                        <td>Treasure Island</td>
+                        <td>Natsu</td>
+                        <td>09/03/2024</td>
+                        <td>4 Days</td>
+                        <td class="act"><a>Send Reminder</a></td>
                     </tr>
                     <tr>
                         <td>0005</td>
-                        <td>Treasure Land</td>
-                        <td>Lewis Carroll</td>
-                        <td>Fantasy/Adventure</td> 
-                        <td class="act"><a>View More</a></td>
+                        <td>Treasure Island</td>
+                        <td>Fred</td>
+                        <td>09/03/2024</td>
+                        <td>4 Days</td>
+                        <td class="act"><a>Send Reminder</a></td>
                     </tr>
-                    
                 </tbody>
             </table>
-            <div class="Inventory-pagination">
+            <div class="History-pagination">
                 <span><img src="./Images/Expand_left.svg" alt="Previous Icon" width="18" height="18"></span>
                 <a href="#" class="prev">Previous</a>
                 <a href="#" class="page-number active" id="one">1</a>
