--- a/ReaderDash.html
+++ b/ReaderDash.html
@@ -9,7 +9,7 @@
             <hr>
         </div>
 
-        <div id="d1" class="box">
+        <div id="d1" class="Reader-box">
             <!-- Input text field and buttons centered on top -->
             <div class="input-area">
                 <div class="search-bar">
@@ -31,7 +31,7 @@
             </div>
 
             <!-- Table Section -->
-            <table class="user-table">
+            <table class="reader-table">
                 <thead>
                     <tr>
                         <th>User ID</th>
@@ -73,7 +73,7 @@
                     </tr>
                 </tbody>
             </table>
-            <div class="pagination">
+            <div class="Reader-pagination">
                 <span><img src="./Images/Expand_left.svg" alt="Previous Icon" width="18" height="18"></span>
                 <a href="#" class="prev">Previous</a>
                 <a href="#" class="page-number active " id="one">1</a>
