--- a/ReaderDash.html
+++ b/ReaderDash.html
@@ -45,31 +45,31 @@
                         <td>1</td>
                         <td>John Doe</td>
                         <td>johndoe@example.com</td>
-                        <td class="act"><a>View More</a></td>
+                        <td class="act"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>2</td>
                         <td>Jane Smith</td>
                         <td>janesmith@example.com</td>
-                        <td class="act"><a>View More</a></td>
+                        <td class="act"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>3</td>
                         <td>Robert Brown</td>
                         <td>robertbrown@example.com</td>
-                        <td class="act"><a>View More</a></td>
+                        <td class="act"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>4</td>
                         <td>Emily White</td>
                         <td>emilywhite@example.com</td>
-                        <td class="act"><a>View More</a></td>
+                        <td class="act"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>5</td>
                         <td>Michael Green</td>
                         <td>michaelgreen@example.com</td>
-                        <td class="act"><a>View More</a></td>
+                        <td class="act"><a href="#">View More</a></td>
                     </tr>
                 </tbody>
             </table>
