--- a/TransactionsReturned.html
+++ b/TransactionsReturned.html
@@ -1,7 +1,7 @@
 <div class="content-box" id="content2">
     <div class="container">
 
-        <div id="d1" class="Inventory-box">
+        <div id="Returend-d1" class="Returned-box">
             <div class="input" >
                 <div class="search-bar">
                     <input type="text" placeholder=" Search...">
@@ -20,63 +20,42 @@
                     <img src="./Images/Expand_down.svg" alt="Icon After" width="18" height="18"> <!-- Icon after text -->
                 </button>
             </div>
-            <div>
-                <div class="addbtn">
-                    <img src="./Images/Add_square_fill.svg" alt="add icon">
-                    Add Book
-                </div>
-            </div>
             <!-- Table Section -->
-            <table class="Inventory-table">
+            <table class="Returned-table">
                 <thead>
                     <tr>
-                        <th>Book Id</th>
-                        <th>Title</th>
+                        <th>Book </th>
                         <th>Author</th>
-                        <th>Genre</th>
-                        <th>Details</th>
+                        <th>Status</th>
+                        <th>Returned By</th>
+                        <th>Date Returned</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>0001</td>
-                        <td>Alice in Wonderland</td>
-                        <td>Lewis Carroll</td>
-                        <td>Fantasy/Adventure</td> 
-                        <td class="act"><a href="#">View More</a></td>
+                        <td><img src="./Images/fw.svg" alt="book"> Fourth Wing</td>
+                        <td>Rebecca Yarros</td>
+                        <td>Good Condition</td>
+                        <td>Nicholai Koblashnicov</td> 
+                        <td>09/28/2024</td>
                     </tr>
                     <tr>
-                        <td>0002</td>
-                        <td>Treasure Land</td>
-                        <td>Lewis Carroll</td>
-                        <td>Fantasy/Adventure</td> 
-                        <td class="act"><a href="#">View More</a></td>
+                        <td><img src="./Images/fw.svg" alt="book"> Fourth Wing</td>
+                        <td>Rebecca Yarros</td>
+                        <td>Good Condition</td>
+                        <td>Nicholai Koblashnicov</td> 
+                        <td>09/28/2024</td>
                     </tr>
                     <tr>
-                        <td>0003</td>
-                        <td>Treasure Land</td>
-                        <td>Lewis Carroll</td>
-                        <td>Fantasy/Adventure</td> 
-                        <td class="act"><a href="#">View More</a></td>
+                        <td><img src="./Images/fw.svg" alt="book"> Fourth Wing</td>
+                        <td>Rebecca Yarros</td>
+                        <td>Good Condition</td>
+                        <td>Nicholai Koblashnicov</td> 
+                        <td>09/28/2024</td>
                     </tr>
-                    <tr>
-                        <td>0004</td>
-                        <td>Treasure Land</td>
-                        <td>Lewis Carroll</td>
-                        <td>Fantasy/Adventure</td> 
-                        <td class="act"><a href="#">View More</a></td>
-                    </tr>
-                    <tr>
-                        <td>0005</td>
-                        <td>Treasure Land</td>
-                        <td>Lewis Carroll</td>
-                        <td>Fantasy/Adventure</td> 
-                        <td class="act"><a href="#">View More</a></td>
-                    </tr>
-                    
                 </tbody>
             </table>
-            <div class="Inventory-pagination">
+            <div class="Returned-pagination">
                 <span><img src="./Images/Expand_left.svg" alt="Previous Icon" width="18" height="18"></span>
                 <a href="#" class="prev">Previous</a>
                 <a href="#" class="page-number active" id="one">1</a>
