--- a/BootDash.html
+++ b/BootDash.html
@@ -11,13 +11,10 @@
     <link rel="stylesheet" href="./ReaderStyle.css">
     <link rel="stylesheet" href="./InventoryStyle.css">
     <link rel="stylesheet" href="./HistoryStyle.css">
-<<<<<<< Updated upstream
     <link rel="stylesheet" href="./TransactionBorrowed.css">
     <link rel="stylesheet" href="./TransactionsReturned.css">
     <link rel="stylesheet" href="./TransactionsOverdue.css">
-=======
     <link rel="stylesheet" href="./dashboardStyle.css">
->>>>>>> Stashed changes
     <title>LiBorrow Dashboard</title>
 </head>
 <body>
@@ -170,8 +167,7 @@ new Chart(pieCtx, {
         responsive: true,
         plugins: {
             legend: {
-                display: true,
-                position: 'bottom'
+                display: false
             }
         }
     }
