--- a/Dashboard.html
+++ b/Dashboard.html
@@ -2,8 +2,8 @@
     <div class="row">
         <!-- Header Section -->
         <div class="col-6" id="top">
-            <h1>Welcome Back!</h1>
-            <div class="row DT">
+            <h1>Welcome Back, Daist Lyn Laygan!</h1>
+            <div class="DT">
                 <div class="datediv">
                 <img src="./Images/date.svg" alt="date Icon" width="24" height="24">
                 <h5>August 12,2024</h5>
@@ -24,7 +24,7 @@
                 <div class="col-6" style="padding-left: 0;">
                     <div class="stat-card">
                         <div class="icon">
-                            <img src="./Images/totalReaders.svg" alt="Total Readers Icon" width="40" height="40">
+                            <img src="./Images/totalReaders.svg" alt="Total Readers Icon" width="50" height="50">
                         </div>
                         <div class="text">
                             <h2>100</h2>
@@ -35,7 +35,7 @@
                 <div class="col-6" style="padding-right: 0;">
                     <div class="stat-card">
                         <div class="icon">
-                                <img src="./Images/totalBooks.svg" alt="Total Books Icon" width="40" height="40">
+                                <img src="./Images/totalBooks.svg" alt="Total Books Icon" width="50" height="50">
                         </div>
                         <div class="text">
                             <h2>200</h2>
@@ -62,7 +62,7 @@
         <!-- Right Side Section -->
         <div class="col-md-8" id="body-side">
             <div class="chart-container" style="margin-top: 0; height: 642px">
-                <canvas id="myBarChart" style="padding-top: 15%;"></canvas>
+                <canvas id="myBarChart" style=" height:100%;"></canvas>
             </div>
         </div>
     </div>
