--- a/BootDash.html
+++ b/BootDash.html
@@ -180,7 +180,7 @@ new Chart(pieCtx, {
         responsive: true,
         plugins: {
             legend: {
-                display: true,
+                display: false,
                 position: 'bottom'
             }
         }
