Added Book Information

--- a/InventoryDash.html
+++ b/InventoryDash.html
@@ -43,35 +43,35 @@
                         <td>Alice in Wonderland</td>
                         <td>Lewis Carroll</td>
                         <td>Fantasy/Adventure</td> 
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act view-book" ><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>0002</td>
                         <td>Treasure Land</td>
                         <td>Lewis Carroll</td>
                         <td>Fantasy/Adventure</td> 
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act view-book"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>0003</td>
                         <td>Treasure Land</td>
                         <td>Lewis Carroll</td>
                         <td>Fantasy/Adventure</td> 
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act view-book"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>0004</td>
                         <td>Treasure Land</td>
                         <td>Lewis Carroll</td>
                         <td>Fantasy/Adventure</td> 
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act view-book"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>0005</td>
                         <td>Treasure Land</td>
                         <td>Lewis Carroll</td>
                         <td>Fantasy/Adventure</td> 
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act view-book"><a href="#">View More</a></td>
                     </tr>
                     
                 </tbody>
