--- a/ReadersInformation.html
+++ b/ReadersInformation.html
@@ -42,7 +42,7 @@
                     </button>
                 </div>
             </div>
-            <div class="SusBan-btn">
+            <div class="ReaderSusBan-btn">
                 <button class="update-btn">
                     Suspend
                 </button>
