--- a/HistoryDash.html
+++ b/HistoryDash.html
@@ -45,7 +45,7 @@
                         <td>Nicholai</td>
                         <td>09/03/2024</td>
                         <td>4 Days</td>
-                        <td class="act"><a>Send Reminder</a></td>
+                        <td class="act"><a href="#">Send Reminder</a></td>
                     </tr>
                     <tr>
                         <td>0002</td>
@@ -53,7 +53,7 @@
                         <td>Jane Smith</td>
                         <td>10/07/2024</td>
                         <td>5 Days</td>
-                        <td class="act"><a>Send Reminder</a></td>
+                        <td class="act"><a href="#">Send Reminder</a></td>
                     </tr>
                     <tr>
                         <td>0003</td>
@@ -61,7 +61,7 @@
                         <td>Kobe</td>
                         <td>09/03/2024</td>
                         <td>4 Days</td>
-                        <td class="act"><a>Send Reminder</a></td>
+                        <td class="act"><a href="#">Send Reminder</a></td>
                     </tr>
                     <tr>
                         <td>0004</td>
@@ -69,7 +69,7 @@
                         <td>Natsu</td>
                         <td>09/03/2024</td>
                         <td>4 Days</td>
-                        <td class="act"><a>Send Reminder</a></td>
+                        <td class="act"><a href="#">Send Reminder</a></td>
                     </tr>
                     <tr>
                         <td>0005</td>
@@ -77,7 +77,7 @@
                         <td>Fred</td>
                         <td>09/03/2024</td>
                         <td>4 Days</td>
-                        <td class="act"><a>Send Reminder</a></td>
+                        <td class="act"><a href="#">Send Reminder</a></td>
                     </tr>
                 </tbody>
             </table>
