update profile and book info

--- a/BooksInformation.html
+++ b/BooksInformation.html
@@ -1,6 +1,6 @@
 <div class="content-box" id="content2">
     <div class="container">
-        <div id="Readd1" class="Readerbox">
+        <div id="Readd1" class="Binfobox">
             <div class="Readbox Rglobal" id="BboxView">
                 <div class="Bview">
                     <img src="./Images/FourthWing_book.png" alt="Book one" id="Bookpic">
@@ -16,10 +16,10 @@
                             <label for="input-two">Author</label>
                         </div>
                     </div>
-                    <div class="input-container">
-                        <input type="text" id="input-three" placeholder=" " required>
-                        <label for="input-three">Title</label>
-                    </div>
+                        <div class="input-container">
+                            <input type="text" id="input-three" placeholder=" " required>
+                            <label for="input-three">Title</label>
+                        </div>
                     <div class="input-row">
                         <div class="input-container">
                             <input type="text" id="input-four" placeholder=" " required>
@@ -48,7 +48,7 @@
 
                 </div>                   
             </div>
-            <div class="SusBan-btn">
+            <div class="updatedelete-btn">
                 <button class="update-btn">Update</button>
                 <button class="update-btn" id="banbtn">Delete</button>
             </div>
