--- a/ReadersInformation.html
+++ b/ReadersInformation.html
@@ -37,7 +37,7 @@
                                       
                 </div>
                 <div class="upbtn">
-                    <button class="update-btn">
+                    <button id="update-button" class="update-btn">
                         Update
                     </button>
                 </div>
