--- a/login.html
+++ b/login.html
@@ -18,6 +18,7 @@
             </a>
         </div>
     </nav>
+
     <section class="main-section">
         <!-- Left Column: Slogan -->
         <div class="col-3 left-column">
@@ -29,13 +30,36 @@
         <div class="col-5 center-column">
             <div class="login-form-container"   >
                 <h3 class="text-center">Welcome Back!</h3>
-                <form>
+                <?php
+                include('connection.php');
+                session_start();
+
+                if($_SERVER["REQUEST_METHOD"] == "POST") {
+                    $email = mysqli_real_escape_string($conn, $_POST["email"]);
+                    $pass = mysqli_real_escape_string($conn, $_POST["password"]);
+                    
+                    $query = "SELECT * FROM users WHERE email='$email' AND password='$pass'";
+                    $result = mysqli_query($conn, $query);
+                    $count = mysqli_num_rows($result);
+                    
+                    if($count >= 1) {
+					// Redirect to BootDash.html on successful login
+						echo "<script>
+								alert('Login Success!');
+								window.location.href = 'BootDash.html';
+							  </script>";
+					} else {
+						echo "<script>alert('Login Failed')</script>";
+					}
+                }
+                ?>
+                <form action="login.php" method="post">
                     <div class="mb-5 email-input input-container">
-                        <input type="email" class="form-control" id="email"  required>
+                        <input type="email" class="form-control" id="email" name="email" required>
                         <label for="email">Email Address</label>
                     </div>
                     <div class="mb-3 password-input input-container">
-                        <input type="password" class="form-control" id="password" required>
+                        <input type="password" class="form-control" id="password" name="password" required>
                         <label for="password">Password</label>
                         <span class="password-toggle" onclick="togglePassword()">
                             <i id="eye-icon" class="bi bi-eye"></i>
