--- a/TransactionsBorrowed.html
+++ b/TransactionsBorrowed.html
@@ -44,19 +44,19 @@
                         <td>0001</td>
                         <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
                         <td>2024-10-10</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act ViewMoreInfo"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>0002</td>
                         <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
                         <td>2024-10-10</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act ViewMoreInfo"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>0003</td>
-                        <td>John Doe</td>
+                        <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
                         <td>2024-10-10</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act ViewMoreInfo"><a href="#">View More</a></td>
                     </tr>
                 </table>
             </div>
@@ -87,19 +87,19 @@
                         <td>0001</td>
                         <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
                         <td>2024-10-10</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act ViewMoreInfo"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>0002</td>
                         <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
                         <td>2024-10-10</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act ViewMoreInfo"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>0003</td>
                         <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
                         <td>2024-10-10</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act ViewMoreInfo"><a href="#">View More</a></td>
                     </tr>
                 </table>
             </div>
@@ -128,19 +128,19 @@
                         <td>0001</td>
                         <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="45" height="45">John Doe</td>
                         <td>2024-10-10</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act ViewMoreInfo"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>0002</td>
                         <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
                         <td>2024-10-10</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act ViewMoreInfo"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>0003</td>
                         <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
                         <td>2024-10-10</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act ViewMoreInfo"><a href="#">View More</a></td>
                     </tr>
                 </table>
             </div>
@@ -170,26 +170,22 @@
                         <td>0001</td>
                         <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
                         <td>2024-10-10</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act ViewMoreInfo"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>0002</td>
                         <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
                         <td>2024-10-10</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act ViewMoreInfo"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>0003</td>
                         <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
                         <td>2024-10-10</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act ViewMoreInfo"><a href="#">View More</a></td>
                     </tr>
                 </table>
             </div>
         </div>
     </div>
-    
-    <script>
-
-    </script>
 </div>
