--- a/BootDash.html
+++ b/BootDash.html
@@ -51,22 +51,22 @@
                         <ul id="submenu">
                             <li>
                                 <a href="#" id="pendBtn">
-                                    <img src="./Images/Vector.svg" alt="Pending Icon" width="18" height="18"> Pending
+                                    Pending
                                 </a>
                             </li>
                             <li>
                                 <a href="#" id="BorrowedBtn">
-                                    <img src="./Images/Vector.svg" alt="Borrowed Icon" width="18" height="18"> Borrowed
+                                    Borrowed
                                 </a>
                             </li>
                             <li>
                                 <a href="#" id="ReturnedBtn">
-                                    <img src="./Images/Vector.svg" alt="Returned Icon" width="18" height="18"> Returned
+                                    Returned
                                 </a>
                             </li>
                             <li>
                                 <a href="#" id="OverdueBtn">
-                                    <img src="./Images/Vector.svg" alt="Overdue Icon" width="18" height="18"> Overdue
+                                    Overdue
                                 </a>
                             </li>
                         </ul>
@@ -378,6 +378,7 @@ const myBarChart = new Chart(ctx, {
                     document.title = "Borrowed Books"; // Change the page title
                     document.getElementById("page-title").innerText = "Borrowed Books"; // Change the displayed title
                     initializeBorrowedListeners();
+                    initializeViewMoreListeners();
                 })
                 .catch(error => console.error('Error fetching content:', error));
         });
@@ -539,6 +540,39 @@ const myBarChart = new Chart(ctx, {
                 dropdown.style.display = 'none'; // Hide the dropdown
             }
         });
+    });
+}
+function initializeViewMoreListeners() {
+    // Function to handle the fetch request and content loading
+    function fetchAndDisplayContent(event) {
+        event.preventDefault(); // Prevent the default link behavior
+
+        fetch('./ReadersInformation.html') // Fetch the external HTML file
+            .then(response => {
+                if (!response.ok) { // Check for network errors
+                    throw new Error('Network response was not ok');
+                }
+                return response.text(); // Convert the response to text
+            })
+            .then(data => {
+                // Insert the fetched content into the 'fetched-content' div
+                document.getElementById("body-content").innerHTML = data;
+                document.title = "Reader's Information"; // Update the page title
+
+                // Reinitialize event listeners for any new elements inside the fetched content
+                document.querySelectorAll('.view-more-btn').forEach(button => {
+                    button.addEventListener('click', function(event) {
+                        event.preventDefault();
+                        // Logic for view-more inside new content
+                    });
+                });
+            })
+            .catch(error => console.error('Error fetching content:', error)); // Handle fetch errors
+    }
+
+    // Add the click event listener to each "View More Info" link
+    document.querySelectorAll(".ViewMoreInfo a").forEach(button => {
+        button.addEventListener("click", fetchAndDisplayContent);
     });
 }
 
