cleaned few code and adjusted some inconsistencies

--- a/TransactionsBorrowed.html
+++ b/TransactionsBorrowed.html
@@ -1,6 +1,6 @@
 <div class="content-box" id="content2">
     <div class="container">
-        <div class="TranscInput">
+        <div class="input">
             <div class="search-bar">
                 <input type="text" placeholder=" Search...">
                 <span class="search-icon">
@@ -65,7 +65,7 @@
             <div class="Borrbox Bglobal">
                 <img src="./Images/MokingBird.png" alt="Book one" id="book1">
                 <div class="book-details">
-                    <p id="btitle">To Kill A MockingBird</p>
+                    <p  id="btitle">To Kill A MockingBird</p>
                     <p class="author">Harper Lee</p>
                 </div>
                 <div class="Borrowed-total">
