--- a/TransactionsDash.html
+++ b/TransactionsDash.html
@@ -10,7 +10,7 @@
 
 <div class="content-box" id="content2">
     <div class="container">
-        <div class="TranscInput">
+        <div class="input">
             <div class="search-bar">
                 <input type="text" placeholder=" Search...">
                 <span class="search-icon">
