--- a/BootDash.html
+++ b/BootDash.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="./UpdateUser.css">
     <link rel="stylesheet" href="./AddBook.css">
     <link rel="stylesheet" href="./Settings.css">
-    
     <title>LiBorrow Dashboard</title>
 </head>
 <body>
@@ -605,7 +604,11 @@ function initializeViewMoreListeners() {
     });
 }
 
-        
+    document.querySelector('.pencil-icon').addEventListener('click', function() {
+            var inputField = document.getElementById('full-name');
+            inputField.disabled = false;  // Enable the input field
+            inputField.focus();  // Optionally focus the input field
+    });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
